--- a/VirtualDesktop.Showcase.csproj
+++ b/VirtualDesktop.Showcase.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="VirtualDesktop" Version="4.0.0" />
-    <PackageReference Include="VirtualDesktop.WPF" Version="4.0.0" />
+    <PackageReference Include="VirtualDesktop.WinForms" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
