remove VirtualDesktop package reference and added original project as a referece

--- a/VirtualDesktop.Showcase.csproj
+++ b/VirtualDesktop.Showcase.csproj
@@ -18,8 +18,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="VirtualDesktop" Version="4.0.0" />
     <PackageReference Include="VirtualDesktop.WinForms" Version="4.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\VirtualDesktop-master\source\VirtualDesktop.WPF\VirtualDesktop.WPF.csproj" />
+    <ProjectReference Include="..\VirtualDesktop-master\source\VirtualDesktop\VirtualDesktop.csproj" />
   </ItemGroup>
 
   <ItemGroup>
